# browser-automation-cli

./: .gitignore  AGENTS.md  LICENSE.txt  Makefile  README.md  RELEASE.md  SKILL.md  pyproject.toml  setup.sh
cli/: main.py
daemon/: browser.py  server.py  session.py
