[project]
name = "browser-automation-cli"
version = "0.1.0"
description = "Lightweight browser automation daemon with CLI"
requires-python = ">=3.10"
readme = "README.md"
license = {file = "LICENSE.txt"}
authors = [
    {name = "Browser CLI Maintainers"},
]
keywords = ["browser", "playwright", "automation", "cli", "agent"]
dependencies = [
    "playwright>=1.40.0",
]

[project.urls]
Homepage = "https://github.com/<your-org>/<your-repo>"
Repository = "https://github.com/<your-org>/<your-repo>"

[project.scripts]
browser-daemon = "daemon.server:main"
browser = "cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["daemon", "cli"]

[tool.rye]
dev-dependencies = []
