[project]
name = "browser-automation-cli"
version = "0.2.0"
description = "Browser automation daemon + CLI for coding agents. Persistent sessions, no MCP, no extensions."
requires-python = ">=3.10"
readme = "README.md"
license = {file = "LICENSE.txt"}
authors = [
    {name = "Browser CLI Maintainers"},
]
keywords = ["browser", "playwright", "automation", "cli", "agent"]
dependencies = [
    "playwright>=1.40.0",
]

[project.urls]
Homepage = "https://github.com/jshan9078/browser-automation-cli"
Repository = "https://github.com/jshan9078/browser-automation-cli"

[project.scripts]
browser-daemon = "daemon.server:main"
browser = "cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["daemon", "cli"]
